[package]
name = "solana-maths"
version = "0.1.1"
edition = "2018"
description = "Maths utility for solana contracts"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"
solana-program = "1.8.5"
uint = "0.8.0"
arrayref = "0.3.6"